js/js.translator/testData/incremental/invalidation/toplevelPropertiesWithCrossModuleInliner/lib2/l2globalVar.9.kt
inline fun globalVarGetWrapper() =  globalVar

inline fun globalVarSetWrapper(v: String) { globalVar = v }

inline fun globalVarWrapper(): String {
    globalVarSetWrapper("2")
    return globalVarGetWrapper()
}
